--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Snø</title>
+<title>SNØCAP</title>
 <link type="text/css" rel="stylesheet" href="src/css/style.css" />
 <meta name="viewport" content="width=device-width initial-scale=1.0 maximum-scale=1.0 user-scalable=no" />
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
@@ -47,21 +47,12 @@
 		<div class="column1">&nbsp;</div>
 		<div class="column2 al">
 			<h1 class="f_wht">
-			Snø is a diverse ecosystem of experts, creatives, and institutions collectively accelerating innovations that heal our planet.
- 			<br><br>
- 			We are called to be architects of the future, it’s time to Create! 
-			<br><br>
-			Drop us a line, or genius thoughts...
-				<br>
-				<br>
-				<a class="h1" href="mailto:ideas@sno.llc">ideas@sno.llc</a>	
-				<br><br><br>
+			SNØCAP is a diverse ecosystem of experts, creatives, and institutions collectively accelerating innovations that heal our planet.
 		  </h1>
 			
 			<legal>
-			Snø 2021<br>
-			<br>
-			<br>
+				SNØCAP 2021
+				<br><br><br>
 		  </legal>	
   </div>
 		<div class="column1">&nbsp;</div>
