--- a/index.html
+++ b/index.html
@@ -42,12 +42,9 @@
 <div class="row">
 		<div class="column1">&nbsp;</div>
 		<div class="column2 al">
-			<h1 class="f_wht">
-			SNØCAP is a diverse ecosystem of experts, creatives, and institutions collectively accelerating innovations that heal our planet.
-		  </h1>
-			
+			<h1 class="f_wht"><center>SNØCAP</center></h1>
 			<legal>
-				SNØCAP 2021
+				Coming to a planet near you, summer 2021.
 				<br><br><br>
 		  </legal>	
   </div>
