--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<div class="column2 al">
 			<h1 class="f_wht"><center>SNØCAP</center></h1>
 			<legal>
-				Coming to a planet near you, summer 2021.
+				<center>Coming to a planet near you, summer 2021.</center>
 				<br><br><br>
 		  </legal>	
   </div>
